# provider-sample-url-finder

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  Makefile  README.md  docker-compose.yml
.sqlx/: query-016f7a204a5261b21fb11930d3b8e12e8b20dc06d3fc9e04bdff29e81964b6c6.json  query-054294f218252f0353178e41f058f2bafa6a923c085e92dadade8ab74c274051.json  query-072675ef78b55b473101ad5e556529177403872c30a9f1f95829fcfe03a3cc68.json  query-0735e4bd270243bb1fb6f73dbef302243f97f803e4631319f1900e6f281cdf7b.json  query-0888cedbf0d7f3e8c83aede3466fccb00af870688c27550b194ea1d6a47e624e.json  query-0b9e363e1e7b5f64bbf02de8cbf36e85b787a7ea7ca8bae696db2e6eb7b641ba.json  query-0bad6623c80c1f6d6194bcf5d29a5d6ac0a84037970d443b928563246b55e1f3.json  query-0d508a84537342402287e6e1ee027b3240dfde57b8e0ba59ccc9bb508d30ae05.json  query-115e726bcb380b3521ffd3e41db323939295497fe867b5fe96fd661069ea4f9d.json  query-118f56fce191a3540ca27e4e37264a54cbd2a708b92a409463b6dd5460c4a434.json  query-11e8beeacc1aac5d25623e6ac63c5406f247fab08faf2160898639e327e03d6c.json  query-12d7f6ae8955ca4b916c0d4d311455c156a6d9e1b09fbac16f65f47beef4ab8b.json  query-14429b1538ea4ee9862eb2ca4eedec7453b70d1bfd25c0b23d7e1fc00d69ee29.json  query-14fe90a901c84e0703e2249cfcfbc1aeb910571f2fc37236bcc59053113bc361.json  query-18f183fec736355c9fb15adb67249d3574870e001e438aa524143a547a7a7376.json  query-1b4b689fb91016e4c256c412f30459393ddc9a8549ad90410daefa5921a3faa3.json  query-1d19a32b718db6841bf9e043c74d5ee04121ae74f7484de022a12e2b1af3e3c9.json  query-1f5a838a40ce22f9e403016924f645dfc7a64858a44ad64bf1c44ee26b7dff7c.json  query-228d02eb675e16608c62f07754b3c8c35876502f176eb47c7691678984882238.json  query-2560c9b3a2b4b59c719aea612c9cbb195110a603f56280bf2791795657827abc.json  query-25b3ae24b12a0bc03e47e33aac153a4b4377a6f1230340a11da7ab957ad1f521.json  query-2a10bf57f8cfe7fafdd154c439ab496f6c4a8c059c02242938c1cd836e713fd1.json  query-2ad7ea132b8bb4e7a976d26dbace045022fba9e78f53b9e0a7c4dc3ea5a22f48.json  query-2c8f0fca32d7d16d6956dbf7bad248067dbfe22dcd7e7d58dff1db2b261826cc.json  query-2dab22beae9cac4d5289de6834789b3813edaed68ad2c45b75ae8bffe6380484.json  (+141 more)
migrations/: 20251106110552_create_storage_providers.up.sql  (+37 more)
url_finder/: Cargo.toml
url_finder/.sqlx/: query-65059fe3bf55781ccbf2fc119fe8288664209f3d8fdc038d1bbefa7d2029b9da.json  query-7226de32a9b62d4130da824f49a1671a011dc9f5af9fc84ec15ee73a57db5322.json  query-7974904e7548db58b0193d88e95fe86f8d2efcf1cd05acaa945d01ba084abd04.json  query-7ef60661a9826e8e3e00158e7d018c465227cff3b07498d8793f310cf78135ef.json  query-c2c958b52086e4f9559db175d2ee01a125ddca116b5d02656825e4bef039eba9.json
url_finder/src/: api_response.rs  auth.rs  bms_client.rs  car_header.rs  cid_contact.rs  circuit_breaker.rs  config.rs  deal_repo.rs  deal_service.rs  http_client.rs  lib.rs  lotus_rpc.rs  main.rs  multiaddr_parser.rs  pix_filspark.rs  provider_endpoints.rs  routes.rs  types.rs  url_tester.rs
url_finder/src/api/: api_doc.rs  cache_middleware.rs  create_job.rs  find_client.rs  find_retri_by_client.rs  find_retri_sp.rs  find_retri_sp_client.rs  find_url.rs  find_url_sp.rs  find_url_sp_client.rs  get_job.rs  healthcheck.rs  mod.rs  responses.rs
url_finder/src/api/deals/: create_run.rs  get_deal.rs  get_latest.rs  mod.rs  types.rs  upsert_deal.rs
url_finder/src/api/providers/: bulk_providers.rs  get_client_providers.rs  get_provider.rs  get_provider_client.rs  history_retrievability.rs  list_providers.rs  mod.rs  reset_provider.rs  types.rs
url_finder/src/background/: bms_scheduler.rs  deal_sli_scheduler.rs  endpoint_scheduler.rs  job_handler.rs  mod.rs  peer_id_scheduler.rs  provider_discovery.rs  url_discovery_scheduler.rs
url_finder/src/repository/: bms_result_repo.rs  deal_label_repo.rs  deal_repo.rs  deal_sli_repo.rs  job_repo.rs  mod.rs  storage_provider_repo.rs  url_result_repo.rs
url_finder/src/services/: consistency_analyzer.rs  deal_manifest.rs  deal_service.rs  deal_sli_service.rs  label_verification.rs  mod.rs  provider_service.rs  url_discovery_service.rs
url_finder/src/utils/: mod.rs  reqwest_retry.rs
url_finder/tests/common/: container.rs  db_setup.rs  mock_servers.rs  mod.rs  test_app.rs  test_constants.rs  test_context.rs  test_schema.sql  validation_helpers.rs
url_finder/tests/integration_tests/: bms_client.rs  bms_result_repo.rs  clients_providers.rs  deal_sli_api.rs  deal_sli_scheduler.rs  deals_auth.rs  extended_response.rs  find_client.rs  find_retri_sp.rs  find_retri_sp_client.rs  find_url_sp.rs  find_url_sp_client.rs  history_retrievability.rs  mod.rs  providers_bulk.rs  providers_client.rs  providers_get.rs  providers_list.rs  providers_reset.rs  rate_limiting.rs  url_discovery_service.rs  url_validation.rs
(+23 files in other folders)
