[package]
name = "url_finder"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
axum = { version = "0.7.5", features = ["macros", "tokio"] }
axum-extra = { version = "0.9.3" }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209" }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", 'fmt'] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "tls-rustls-aws-lc-rs",
  "chrono",
  "bigdecimal",
] }
futures = "0.3.31"
once_cell = "1.20.2"
common = { git = "https://github.com/fidlabs/bandwidth-measurement-system.git", branch = "feature/url_finder_microservice" }
tower = { version = "0.5.1", features = ["timeout"] }
utoipa = { version = "5.2.0", features = [
  "axum_extras",
  "uuid",
  "url",
  "chrono",
  "debug",
] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "reqwest", "url"] }
multiaddr = "0.18.2"
