[package]
name = "url_finder"
version = "0.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
axum = { version = "0.7.9", features = ["macros", "tokio"] }
axum-extra = { version = "0.9.3" }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209" }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", 'fmt'] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "tls-rustls-aws-lc-rs",
  "chrono",
  "bigdecimal",
] }
futures = "0.3.31"
once_cell = "1.20.2"
common = { git = "https://github.com/fidlabs/bandwidth-measurement-system.git", rev = "0ca8779" }
tower = { version = "0.5.2", features = ["timeout", "limit"] }
tower-http = { version = "0.6.2", features = ["cors"]}
utoipa = { version = "5.2.0", features = [
  "axum_extras",
  "uuid",
  "url",
  "chrono",
  "debug",
] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "reqwest", "url"] }
tower_governor = { version = "0.5.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
moka = { version = "0.12.10", default-features = false, features = ["future"] }
alloy = { version = "1.0.41", default-features = false, features = ["sol-types", "network", "providers", "rpc-types-eth", "rpc-client", "reqwest"] }
urlencoding = "2.1.3"
multiaddr = "0.18.2"
dotenvy = "0.15.7"

[dev-dependencies]
wiremock = "0.6"
