[package]
name = "url_finder"
version = "1.0.0"
edition = "2024"

[lib]
name = "url_finder"
path = "src/lib.rs"

[[bin]]
name = "url_finder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
axum = { version = "0.8", features = ["macros", "tokio"] }
axum-extra = { version = "0.10" }
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
retry-policies = "0.4"
async-trait = "0.1"
http = "1.1"
serde = { version = "1.0.209" }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "tls-rustls-aws-lc-rs",
  "chrono",
  "bigdecimal",
] }
futures = "0.3.31"
once_cell = "1.20.2"
tower = { version = "0.5.2", features = ["timeout", "limit"] }
tower-http = { version = "0.6.2", features = ["cors"]}
utoipa = { version = "5.4.0", features = [
  "axum_extras",
  "uuid",
  "url",
  "chrono",
  "debug",
] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest", "url"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
moka = { version = "0.12.10", default-features = false, features = ["future"] }
alloy = { version = "1.0.41", default-features = false, features = ["sol-types", "network", "providers", "rpc-types-eth", "rpc-client", "reqwest"] }
urlencoding = "2.1.3"
multiaddr = "0.18.2"
dotenvy = "0.15.7"
rand = "0.9.2"

[dev-dependencies]
wiremock = "0.6.5"
assert-json-diff = "2.0"
pretty_assertions = "1.4.1"
tokio-test = "0.4"
axum-test = "18.2"
serial_test = "3.2"
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
